--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,5 +29,10 @@
 		"compilerOptions": {
 			"module": "CommonJS"
 		}
-	}
+	},
+	"include": [
+		"./config/jest/setupTests.ts",
+		"./src/**/*.ts",
+		"./src/**/*.tsx"
+	]
 }
