--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "lint:ts:fix": "eslint '**/*.{ts,tsx}' --fix",
     "lint:scss": "npx stylelint \"**/*.scss\"",
     "lint:scss:fix": "npx stylelint \"**/*.scss\" --fix",
-    "unit": "jest --config ./config/jest/jest.config.ts",
+    "test-unit": "jest --config ./config/jest/jest.config.ts",
     "storybook": "start-storybook -p 6006 -c ./config/storybook",
     "build-storybook": "build-storybook -c ./config/storybook",
-    "loki:test": "yarn loki test"
+    "test-ui": "yarn loki test",
+    "test-ui-ok": "yarn loki approve"
   },
   "keywords": [],
   "author": "",
