--- a/.github/workflows/push_PR.yml
+++ b/.github/workflows/push_PR.yml
@@ -17,15 +17,25 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - name: install modules
+
+      - name: Install modules (yarn)
         run: yarn install -g
-      - name: build production version
-        run: yarn run build:prod
-      - name: lint ts
-        run: yarn run lint:ts
-      - name: lint scsss
-        run: yarn run lint:scss
-      - name: run storybook
-        run: yarn run build-storybook
-      - name: run unit testing
+
+      - name: Build production version
+        run: yarn run build-prod
+
+      - name: Lint TS
+        run: yarn run lint-ts
+
+      - name: Lint SCSS
+        run: yarn run lint-scss
+
+      - name: Unit testing
         run: yarn run test-unit
+
+      - name: Run Storybook
+        run: yarn run build-storybook
+
+      - name: Run Loki testing
+        run: yarn run test-ui-ci
+
