--- a/package.json
+++ b/package.json
@@ -5,17 +5,19 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --env port=3001",
-    "build:prod": "webpack --env mode=production",
-    "build:dev": "webpack --env mode=development",
-    "lint:ts": "eslint '**/*.{ts,tsx}'",
-    "lint:ts:fix": "eslint '**/*.{ts,tsx}' --fix",
-    "lint:scss": "npx stylelint \"**/*.scss\"",
-    "lint:scss:fix": "npx stylelint \"**/*.scss\" --fix",
+    "build-prod": "webpack --env mode=production",
+    "build-dev": "webpack --env mode=development",
+    "lint-ts": "eslint '**/*.{ts,tsx}'",
+    "lint-ts-fix": "eslint '**/*.{ts,tsx}' --fix",
+    "lint-scss": "npx stylelint \"**/*.scss\"",
+    "lint-scss-fix": "npx stylelint \"**/*.scss\" --fix",
     "storybook": "start-storybook -p 6006 -c ./config/storybook",
     "build-storybook": "build-storybook -c ./config/storybook",
     "test-unit": "jest --config ./config/jest/jest.config.ts",
     "test-ui": "yarn loki test",
-    "test-ui-ok": "yarn loki approve"
+    "test-ui-ok": "yarn loki approve",
+    "test-ui-ci": "loki --requireReference --reactUri file:./storybook-static"
+
   },
   "keywords": [],
   "author": "",
