--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
     "lint-ts-fix": "eslint '**/*.{ts,tsx}' --fix",
     "lint-scss": "npx stylelint \"**/*.scss\"",
     "lint-scss-fix": "npx stylelint \"**/*.scss\" --fix",
-    "storybook": "start-storybook -p 6006 -c ./config/storybook",
-    "build-storybook": "build-storybook -c ./config/storybook",
     "test-unit": "jest --config ./config/jest/jest.config.ts",
     "test-ui": "yarn loki test",
     "test-ui-ok": "yarn loki approve",
-    "test-ui-ci": "loki --requireReference --reactUri file:./storybook-static"
-
+    "test-ui-ci": "loki --requireReference --reactUri file:./storybook-static",
+    "test-ui-report": "yarn test-ui-report-json && yarn test-ui-report-html",
+    "test-ui-report-json": "node scripts/generate-visual-json-report.js",
+    "test-ui-report-html": "reg-cli --from .loki/report.json --report .loki/report.html",
+    "storybook": "start-storybook -p 6006 -c ./config/storybook",
+    "build-storybook": "build-storybook -c ./config/storybook"
   },
   "keywords": [],
   "author": "",
@@ -66,6 +68,7 @@
     "loki": "^0.31.0",
     "mini-css-extract-plugin": "^2.5.3",
     "postcss": "8.4.13",
+    "reg-cli": "0.17.6",
     "regenerator-runtime": "0.13.9",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
