--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@svgr/webpack": "^6.2.1",
     "@testing-library/jest-dom": "5.16.2",
     "@testing-library/react": "12.1.3",
-    "@types/jest": "^27.4.1",
+    "@types/jest": "^29.4.0",
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
@@ -86,12 +86,14 @@
     "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.3",
     "i18next": "^21.6.11",
     "i18next-browser-languagedetector": "^6.1.3",
     "i18next-http-backend": "^1.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.15.5",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.2.1"
   },
   "loki": {
