--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test-ui-report-json": "node scripts/generate-visual-json-report.js",
     "test-ui-report-html": "reg-cli --from .loki/report.json --report .loki/report.html",
     "storybook": "start-storybook -p 6006 -c ./config/storybook",
-    "build-storybook": "build-storybook -c ./config/storybook",
+    "storybook-build": "build-storybook -c ./config/storybook",
     "prepare": "husky install"
   },
   "keywords": [],
@@ -64,6 +64,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "husky": "^8.0.0",
     "identity-obj-proxy": "3.0.0",
     "jest": "^27.5.1",
     "jest-environment-jsdom": "^27.5.1",
@@ -86,18 +87,18 @@
     "webpack": "^5.69.1",
     "webpack-bundle-analyzer": "^4.8.0",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.7.4",
-    "husky": "^8.0.0"
+    "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.3",
+    "@reduxjs/toolkit": "^1.9.0",
+    "axios": "^1.3.4",
     "i18next": "^21.6.11",
     "i18next-browser-languagedetector": "^6.1.3",
     "i18next-http-backend": "^1.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.15.5",
-    "react-redux": "^8.0.5",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1"
   },
   "loki": {
